Prevent size flickering

--- a/www/awcy.css
+++ b/www/awcy.css
@@ -17,6 +17,7 @@ article {
 }
 #runbox {
   width: 200px;
+  flex-shrink: 0;
 }
 #runs {
 }
